NXP-6726: provide signature undo capability

--- a/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
+++ b/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
@@ -21,7 +21,9 @@ command.cert.generate=Generate Certificate
 command.cert.root.certificate.download=Download the public root certificate for your PDF viewer
 label.sign.title=Digital Signature
 label.sign.password=Certificate Password
-label.sign.heading.document.signature=Document Signature
+label.sign.heading.document.file=Main file
+label.sign.heading.document.form=Signing form
+label.sign.heading.document.signatures=Document Signatures
 label.sign.reason=Signing Reason
 label.sign.prompt=File
 label.sign.submit=Sign now
@@ -31,7 +33,7 @@ label.sign.attachments.missing=Your document does not contain any attachments
 label.sign.pdf.warning=The attachment must be a PDF
 label.sign.document.mime=MIME information missing for your document
 label.sign.modify.permission.warning=You are not permitted to sign this document
-label.sign.document.signed=This document is signed by
+label.sign.document.signed=This document was signed by
 label.sign.document.not.signed=You did not sign this document
 notification.sign.signed=has been signed
 notification.sign.certificate.access.problem=Problem accessing your certificate. Make sure your password is correct.
