NXP-6763: add management of the Anonymous dashboard and default user dashobard in the Admin Center

--- a/nuxeo-user-dashboard/nuxeo-user-dashboard/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -1,2 +1,3 @@
 label.user.dashboard=My Personal Dashboard
 user.center.dashboard=My dashboard
+tab.anonymous.dashboard.management=Anonymous dashboard management
