--- a/nuxeo-user-dashboard/nuxeo-user-dashboard/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,2 +1,3 @@
 label.user.dashboard=Mon tableau de bord personnel
 user.center.dashboard=Mon tableau de bord
+tab.anonymous.dashboard.management=Gestion du tableau de bord anonyme
