--- a/nuxeo-user-dashboard/nuxeo-user-dashboard-opensocial/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard-opensocial/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -3,3 +3,6 @@ tab.dashboard.management.anonymous=Anonymous dashboard
 tab.dashboard.management.default=Default user dashboard
 label.dashboard.management.anonymous.description=Set up the dashboard that will be displayed to users that are not logged in.
 label.dashboard.management.default.description=Set up the default dashboard that will be displayed to users until they customize it.
+
+label.opensocial.container.restore.default=Restore to default
+label.opensocial.container.confirmRestoreDashboard=Restore to default?
