--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -306,6 +306,6 @@ label.userSession.lastUrl=Dernière URL accédée
 label.userSession.lastActivity=Dernière activité
 label.userSession.requests=Pages accédées
 
-tab.themes.management=Gestion des thèmes
+tab.themes.management=Th\u00e8mes
 label.themes.management.description=Nuxeo Theme est l'éditeur de thèmes en ligne de Nuxeo, qui vous permet de personnaliser l'apparence de votre application en modifiant ou en créant des thèmes.
 label.themes.management.editor=Lancer Nuxeo Theme
