--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -305,6 +305,6 @@ label.userSession.lastUrl=Last accessed url
 label.userSession.lastActivity=Last activity
 label.userSession.requests=Accessed pages
 
-tab.themes.management=Themes management
+tab.themes.management=Themes
 label.themes.management.description=Nuxeo Theme is Nuxeo's online theme editor that enables you to edit, customize and create looks for your application.
 label.themes.management.editor=Launch Nuxeo Theme
