--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -25,7 +25,8 @@ tab.sysinfo.setup=Configuration
 tab.sysinfo.binariesInfo=Binaires
 
 tab.useractivity.usersSessions=Sessions utilisateurs
-tab.useractivity.usersActivity=Activité des utilisateurs
+tab.useractivity.usersActivity=Evènements
+tab.useractivity.charts=Graphiques d'activité
 
 label.tab.applisting.marketplace=Parcourez la bibliothèque de packages de Nuxeo Marketplace ou installez-les directement depuis la liste ci-dessous.
 label.nuxeo.connect.applisting.package=Packages
@@ -299,6 +300,10 @@ adminsubtab.usersActivity.userSessions.title = Sessions Http des utilisateurs
 adminsubtab.usersActivity.userSessions.total = Nombre total de session actives
 adminsubtab.usersActivity.requests.total = Nombre total de requetes Http
 adminsubtab.usersActivity.userSessions.timerange = Sessions actives depuis
+adminsubtab.usersActivity.events.title = Evènements du log d'audit
+adminsubtab.usersActivity.charts.title = Graphiques
+adminsubtab.usersActivity.charts.eventMonitoring = Dernire évènements du repository
+adminsubtab.usersActivity.charts.httpMonitoring = Activité http
 label.userSession.login=Login
 label.userSession.inactivity=Temps d'inactivité
 label.userSession.duration=Durée de la session
