--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -24,7 +24,8 @@ tab.sysinfo.setup=Setup
 tab.sysinfo.binariesInfo=Repository binaries
 
 tab.useractivity.usersSessions=Users sessions
-tab.useractivity.usersActivity=Users activity
+tab.useractivity.usersActivity=Events
+tab.useractivity.charts=Activity charts
 
 label.tab.applisting.marketplace=Visit the Nuxeo Market Place to browse the packages library or install them directly from the listing below.
 label.nuxeo.connect.applisting.package=Packages
@@ -298,6 +299,10 @@ adminsubtab.usersActivity.userSessions.title = User's Http Sessions
 adminsubtab.usersActivity.userSessions.total = Total number of active Http Sessions
 adminsubtab.usersActivity.requests.total = Total number of Http requests
 adminsubtab.usersActivity.userSessions.timerange = List active sessions within last
+adminsubtab.usersActivity.events.title = Events from Audit log
+adminsubtab.usersActivity.charts.title = Activity charts
+adminsubtab.usersActivity.charts.eventMonitoring = Recent repository events
+adminsubtab.usersActivity.charts.httpMonitoring = Http activity
 label.userSession.login=Login
 label.userSession.inactivity=Inactivity time
 label.userSession.duration=Session duration
