NXP-6939 Add missing labels

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -404,6 +404,8 @@ error.userManager.userAlreadyExists=User already exists
 error.versioning.none_selected=Please select an increment option
 eventDocumentCategory=Document
 eventWorkflowCategory=Workflow
+label.audit.startDate=Start date
+label.audit.endDate=End date
 false=No
 feedback.check.mail.error=Connection error
 feedback.check.mail.success=Email checked successfully
