--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -80,6 +80,8 @@ label.no=No
 # Events / Workflow
 eventDocumentCategory=Document
 eventWorkflowCategory=Workflow
+label.audit.startDate=Start date
+label.audit.endDate=End date
 lifecycle_transition_event=Document lifecycle update
 workflowEnded=Workflow ended
 workflowStarted=Workflow started
