--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -19,6 +19,8 @@ label.noversion=Ce document n'a pas de version archiv\u00e9e.
 lifecycle_transition_event=Modification du cycle de vie
 eventDocumentCategory=Document
 eventLifeCycleCategory=Cycle de vie
+label.audit.startDate=Date de d\u00e9but
+label.audit.endDate=Date de fin
 eventWorkflowCategory=Workflow
 workflowEnded=Workflow termin\u00e9
 workflowStarted=Workflow initi\u00e9
