NXP-6548 Workflow labels

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1495,6 +1495,9 @@ label.workflow.task.documentLocation=Related document
 label.workflow.task.duedate=Due date
 label.workflow.task.endDate=End Date
 label.workflow.task.enddate=End date
+label.review.movedDown.reviewer=Participant(s) moved down
+label.review.movedUp.reviewer=Participant(s) moved up
+
 label.workflow.task.moderate=Moderate the document
 label.workflow.task.name=Task Name
 label.workflow.task.org.nuxeo.ecm.platform.publisher.jbpm.CoreProxyWithWorkflowFactory=Publish document
