--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1529,6 +1529,8 @@ label.workflow.task.org.nuxeo.ecm.platform.publishing.jbpm.JbpmPublisher=Publish
 label.workflow.task.org.nuxeo.ecm.platform.publisher.jbpm.CoreProxyWithWorkflowFactory=Publish document
 label.review.task.ended=Task ended
 label.workflow.task.enddate=End date
+label.review.movedDown.reviewer=Participant(s) moved down
+label.review.movedUp.reviewer=Participant(s) moved up
 
 label.review.confirmDeleteTask=Delete the task?
 label.review.removed.reviewer=Task deleted
