--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1483,6 +1483,9 @@ label.workflow.task.name=Nom de la t\u00e2che
 label.workflow.task.actorId=Acteur
 label.workflow.task.startDate=Date de d\u00e9but
 label.workflow.task.endDate=Date de fin
+label.review.movedDown.reviewer=Participant(s) d\u00e9plac\u00e9(s)
+label.review.movedUp.reviewer=Participant(s) d\u00e9plac\u00e9(s)
+
 label.workflow.variable.participants=Gestion des participants
 label.workflow.task.org.nuxeo.ecm.platform.publishing.jbpm.JbpmPublisher=Document \u00e0 publier
 label.workflow.task.org.nuxeo.ecm.platform.publisher.jbpm.CoreProxyWithWorkflowFactory=Document \u00e0 publier
