Fix typo in message.

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -144,7 +144,7 @@ label.nuxeo.connect.contractStatus=Contract Status :
 label.nuxeo.connect.contractEndDate=Contract end date :
 label.nuxeo.connect.description=Description :
 label.nuxeo.connect.statusError=Connect server returned an error while checking your registration :
-label.nuxeo.connect.securityError=Can not authenticate against the Nuxeo Connect Server. If you just registred with the setup wizard or the Connect Website, check that you did not forget to click on the activation link in the mail sent to you during the registration.
+label.nuxeo.connect.securityError=Can not authenticate against the Nuxeo Connect Server. If you just registered with the setup wizard or the Connect Website, check that you did not forget to click on the activation link in the mail sent to you during the registration.
 label.nuxeo.connect.id.CLID=Logical instance identifier (CLID)
 label.nuxeo.connect.id.CTID=Technical instance identifier (CTID)
 
