NXP-7019: add a multiple document suggestion widget type

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1833,3 +1833,5 @@ label.oauth.1mth=1 month
 
 # Main tabs
 label.main.tab.documents=Document Management
+
+label.documentSuggestion.docNotFoundOrNotVisible=Document not found or not visible
