--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1453,6 +1453,8 @@ label.suggestion.help.minChars.start=Pour lancer la recherche, veuillez taper au
 label.suggestion.help.minChars.end=caract\u00e8re(s)
 label.suggestion.help.minChars=Pour lancer la recherche, veuillez taper au moins {0} caract\u00e8re(s)
 
+label.documentSuggestion.docNotFoundOrNotVisible=Le document n'existe pas ou n'est pas visible
+
 action.admin.publication.tree=Publication
 
 label.publish.add.section=Ajouter
