NXP-7011: better label for the drop zone when no file is present

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1812,6 +1812,7 @@ label.dnd.attach = Attach
 desc.dnd.attach = Attach file to the current document
 label.dnd.attachfiles = Attach
 desc.dnd.attachfiles = Attach files to the current document
+label.dnd.dropHere=Drop here files for them to be attached as the main file and/or attachments.
 command.continue = Continue
 import.continue = Continue import
 label.dnd.upload.inprogress=Upload in progress
