--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1966,6 +1966,7 @@ label.dnd.uploaded.files=Uploaded files
 label.dnd.choose.operation=Select import operation
 label.dnd.nooperation=You cannot upload here (insufficient rights, or bad configuration)
 label.dnd.error=Upload cannot continue due to an error
+label.dnd.dropHere=Drop here files for them to be attached as the main file and/or attachments.
 
 # OAuth Grant screen
 label.oauth.consumer.application = The application
