--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1959,8 +1959,9 @@ label.dnd.upload.inprogress=Import en cours
 label.dnd.upload.ok.continue=Import termin\u00E9, cliquez sur Continuer
 label.dnd.uploaded.files=Fichiers charg\u00E9s sur le serveur
 label.dnd.choose.operation=S\u00E9lectionner l'op\u00E9ration d'import
-label.dnd.nooperation=L'import ne peut pas \u00eatre effectu\\u00e9 (droits insuffisants, ou mauvaise configuration)
+label.dnd.nooperation=L'import ne peut pas \u00eatre effectu\u00e9 (droits insuffisants, ou mauvaise configuration)
 label.dnd.error=L'import ne peut pas continuer \u00e0 cause d'une erreur.
+label.dnd.dropHere=D\u00e9posez ici les fichiers que vous souhaitez attacher en fichier principal et/ou pi\u00e8ces jointes.
 
 # OAuth Grant screen
 label.oauth.consumer.application = L'application
