Fix typographic errors in some messages.

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -128,7 +128,7 @@ action.connect.refreshStatus = Refresh
 label.nuxeo.connect.CLID=CLID provided by Nuxeo Connect Web Site
 label.nuxeo.connect.offlineReg.message1=First, get the CLID number on the
 label.nuxeo.connect.offlineReg.webSite=Nuxeo Connect Web Site
-label.nuxeo.connect.offlineReg.message2=You will be asked to provide your instance technical identifier :
+label.nuxeo.connect.offlineReg.message2=You will be asked to provide your instance technical identifier:
 label.nuxeo.connect.offlineReg.message3=Then, paste here the CLID number provided by Nuxeo Connect and register!
 label.nuxeo.connect.refreshDate=Last refresh date
 label.bad.loginpassword.or.noproject=Wrong login/password or no associated project found on Connect
@@ -140,10 +140,10 @@ label.empty.project=Empty project
 
 label.nuxeo.connect.registration.summary.title=Instance registration summary
 
-label.nuxeo.connect.contractStatus=Contract Status :
-label.nuxeo.connect.contractEndDate=Contract end date :
-label.nuxeo.connect.description=Description :
-label.nuxeo.connect.statusError=Connect server returned an error while checking your registration :
+label.nuxeo.connect.contractStatus=Contract Status:
+label.nuxeo.connect.contractEndDate=Contract end date:
+label.nuxeo.connect.description=Description:
+label.nuxeo.connect.statusError=Connect server returned an error while checking your registration:
 label.nuxeo.connect.securityError=Can not authenticate against the Nuxeo Connect Server. If you just registered with the setup wizard or the Connect Website, check that you did not forget to click on the activation link in the mail sent to you during the registration.
 label.nuxeo.connect.id.CLID=Logical instance identifier (CLID)
 label.nuxeo.connect.id.CTID=Technical instance identifier (CTID)
@@ -203,8 +203,8 @@ label.studio.update=Update your platform
 label.studio.refresh=refresh the list below
 label.studio.latest.config=with the latest config done on Nuxeo Studio or
 label.studio.tagged.version=with Nuxeo Studio tagged packages
-label.studio.update.inprogress=Studio update in progress :
-label.studio.update.lastStatus=Last update on Nuxeo Studio :
+label.studio.update.inprogress=Studio update in progress:
+label.studio.update.lastStatus=Last update on Nuxeo Studio:
 
 label.studio.devmod.title = Development and configuration mode
 label.studio.devmod.desc1 = Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
@@ -291,18 +291,18 @@ label.setup.nuxeo.http.proxy.host=Host name
 label.setup.nuxeo.http.proxy.port=Port
 label.setup.nuxeo.http.proxy.login=Login
 label.setup.nuxeo.http.proxy.password=Password
-label.restart.confirm=Restart server now ?
+label.restart.confirm=Restart server now?
 label.action.restart=Restart server
 label.restart.connectedusers= user(s) currently connected
 
-adminsubtab.usersActivity.userSessions.title = User's Http Sessions
-adminsubtab.usersActivity.userSessions.total = Total number of active Http Sessions
-adminsubtab.usersActivity.requests.total = Total number of Http requests
+adminsubtab.usersActivity.userSessions.title = User's HTTP Sessions
+adminsubtab.usersActivity.userSessions.total = Total number of active HTTP Sessions
+adminsubtab.usersActivity.requests.total = Total number of HTTP requests
 adminsubtab.usersActivity.userSessions.timerange = List active sessions within last
 adminsubtab.usersActivity.events.title = Events from Audit log
 adminsubtab.usersActivity.charts.title = Activity charts
 adminsubtab.usersActivity.charts.eventMonitoring = Recent repository events
-adminsubtab.usersActivity.charts.httpMonitoring = Http activity
+adminsubtab.usersActivity.charts.httpMonitoring = HTTP activity
 label.userSession.login=Login
 label.userSession.inactivity=Inactivity time
 label.userSession.duration=Session duration
