--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ar.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ar.properties
@@ -1353,7 +1353,7 @@ command.smartSearch=\u00ff\u00df\u0178\u00d1\u00ff\u00ae\u00ff\u2260\u00ff\u00b4
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=\u00ff\u2122\u00ff\u2264\u00ff\u00df\u0178\u00d6\u0178\u00dc
 
 # google translation: please check
 #en: Synchronize documents
@@ -1796,7 +1796,7 @@ DocumentRouteInstancesRoot=\u00ff\u2260\u00ff\u00df\u0178\u00d1\u00ff\u00df\u00f
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=\u0178\u00d6\u00ff\u2265\u00ff\u00df\u00ff\u00b1
 
 # Human translation
 #en: {0} saved
@@ -4864,7 +4864,7 @@ label.dnd.choose.operation=\u00ff\u2260\u00ff\u00d8\u00ff\u00d8 \u00ff\u00df\u00
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=\u00ff\u2022\u00ff\u2265\u0178\u00c7\u00ff\u00df\u00ff\u2211 \u00ff\u00df\u0178\u00d1\u0178\u00d6\u0178\u00d1\u0178\u00c5\u00ff\u00df\u00ff\u2122 \u0178\u00e1\u0178\u00dc\u00ff\u00df \u0178\u00d1\u00ff\u2122\u00ff\u00b1\u0178\u00c5\u0178\u00c7 \u0178\u00d1\u0178\u00e1\u0178\u00d6 \u0178\u00d6\u00ff\u00b4\u0178\u00d1 \u00ff\u00df\u0178\u00d1\u0178\u00d6\u0178\u00d1\u0178\u00c5 \u00ff\u00df\u0178\u00d1\u00ff\u00b1\u00ff\u00b6\u0178\u00e4\u00ff\u2265\u0178\u00e4 \u0178\u00e0 / \u00ff\u00a3\u0178\u00e0 \u00ff\u00df\u0178\u00d1\u0178\u00d6\u00ff\u00b1\u0178\u00c5\u0178\u00c7\u00ff\u00df\u00ff\u2122.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9715,7 +9715,7 @@ mainbutton.start.inprogress=\u00ff\u00ae\u00ff\u00d8\u00ff\u00b0\u00ff\u00df \u0
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=\u00ff\u00ae\u00ff\u00d8\u00ff\u00b0
 
 # google translation: please check
 #en: Start the Nuxeo server.
