--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ca.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ca.properties
@@ -1278,7 +1278,7 @@ command.smartSearch=Cerca Intel ligent
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=Sincronitzar
 
 # google translation: please check
 #en: Synchronize documents
@@ -1678,7 +1678,7 @@ DocumentRouteInstancesRoot=Ruta casos
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=Ruta
 
 # Human translation
 #en: {0} saved
@@ -4642,7 +4642,7 @@ label.dnd.choose.operation=Seleccioneu operaci\u221a\u2265 d&#39;importaci\u221a
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=Col loqueu aqu\u221a\u2260 els arxius per que s&#39;adjunta en l&#39;arxiu principal i / o annexos.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9097,7 +9097,7 @@ mainbutton.start.inprogress=Inici del servidor ...
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=Inici
 
 # google translation: please check
 #en: Start the Nuxeo server.
