--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
@@ -1353,7 +1353,7 @@ command.smartSearch=Smart Search
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=Synchronisieren
 
 # google translation: please check
 #en: Synchronize documents
@@ -1796,7 +1796,7 @@ DocumentRouteInstancesRoot=Route Instanzen
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=Route
 
 # Human translation
 #en: {0} saved
@@ -4864,7 +4864,7 @@ label.dnd.choose.operation=W\u221a\u00a7hlen Sie Import
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=Drop hier Dateien f\u221a\u00bar sie als die Haupt-Datei beigef\u221a\u00bagt werden und / oder Anh\u221a\u00a7nge.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9715,7 +9715,7 @@ mainbutton.start.inprogress=Ausgehend Server ...
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=Start
 
 # google translation: please check
 #en: Start the Nuxeo server.
