--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
@@ -1330,7 +1330,7 @@ command.smartSearch=B\u221a\u222bsqueda Inteligente
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=Sincronizar
 
 # google translation: please check
 #en: Synchronize documents
@@ -1746,7 +1746,7 @@ DocumentRouteInstancesRoot=Ruta casos
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=Ruta
 
 # Human translation
 #en: {0} saved
@@ -4778,7 +4778,7 @@ label.dnd.choose.operation=Seleccione operaci\u221a\u2265n de importaci\u221a\u2
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=Coloque aqu\u221a\u2260 los archivos para que se adjunta en el archivo principal y / o anexos.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9482,7 +9482,7 @@ mainbutton.start.inprogress=Inicio del servidor ...
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=Inicio
 
 # google translation: please check
 #en: Start the Nuxeo server.
