--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_gl.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_gl.properties
@@ -1295,7 +1295,7 @@ command.smartSearch=Busca Intelixente
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=Sincronizar
 
 # google translation: please check
 #en: Synchronize documents
@@ -1700,7 +1700,7 @@ DocumentRouteInstancesRoot=instancias Ruta
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=Ruta
 
 # Human translation
 #en: {0} saved
@@ -4688,7 +4688,7 @@ label.dnd.choose.operation=Seleccione operaci\u221a\u2265n de importaci\u221a\u2
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=Drop aqu\u221a\u2260 arquivos para seren anexos como o arquivo principal e / ou anexos.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9233,7 +9233,7 @@ mainbutton.start.inprogress=Iniciando o servidor ...
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=Inicio
 
 # google translation: please check
 #en: Start the Nuxeo server.
