--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_it.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_it.properties
@@ -1,10 +1,10 @@
-# google translation: please check
+# Human translation
 #en: Nuxeo Admin Center
-action.admin.center=Nuxeo centro di amministrazione
+action.admin.center=Nuxeo Admin Center
 
-# google translation: please check
+# Human translation
 #en: Exit admin center
-action.admin.exit=Esci centro admin
+action.admin.exit=Esci Admin Center
 
 # Human translation
 #en: Publication targets
@@ -1362,7 +1362,7 @@ command.smartSearch=Smart Search
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=Sincronizzare
 
 # google translation: please check
 #en: Synchronize documents
@@ -1806,7 +1806,7 @@ DocumentRouteInstancesRoot=Route istanze
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=Route
 
 # Human translation
 #en: {0} saved
@@ -4877,7 +4877,7 @@ label.dnd.choose.operation=Selezionare Importa operazione
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=Drop file qui per essere allegata come il file principale e / o gli allegati.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9774,7 +9774,7 @@ mainbutton.start.inprogress=Avvio di server ...
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=Start
 
 # google translation: please check
 #en: Start the Nuxeo server.
