--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
@@ -1353,7 +1353,7 @@ command.smartSearch=\u201e\u00c7\u03c0\u201e\u00c9\u00fb\u201e\u00c9\u00ba\u201e
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=\u00c2\u00ea\u00e5\u00ca\u00fa\u00fc
 
 # google translation: please check
 #en: Synchronize documents
@@ -1796,7 +1796,7 @@ DocumentRouteInstancesRoot=\u201e\u00c9\u00b4\u201e\u00c9\u00ba\u201e\u00c9\u00e
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=\u201e\u00c9\u00b4\u201e\u00c9\u00ba\u201e\u00c9\u00e0
 
 # Human translation
 #en: {0} saved
@@ -4864,7 +4864,7 @@ label.dnd.choose.operation=\u00c8\u00c5\u220f\u00ca\u00e4\u00fb\u201e\u00c5\u00f
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=\u201e\u00c5\u00f9\u201e\u00c7\u00e5\u201e\u00c7\u00e2\u201e\u00c5\u00e4\u201e\u00c7\u00e0\u201e\u00c5\u2265/\u201e\u00c9\u00b0\u201e\u00c7\u00a7\u201e\u00c9\u2265\u201e\u00c9\u00ef\u201e\u00c7\u00b0\u201e\u00c7\u00a7\u201e\u00c9\u00b4\u201e\u00c5\u00ae\u201e\u00c5\u00f3\u201e\u00c5\u00b6\u00ca\u2211\u00aa\u2030\u00aa\u00f2\u201e\u00c5\u00f4\u201e\u00c7\u00e3\u201e\u00c4\u00c5\u201e\u00c5\u00e6\u201e\u00c5\u00fc\u201e\u00c5\u00d8\u00ca\u2211\u00aa\u2030\u00aa\u00f2\u201e\u00c9\u00ef\u201e\u00c7\u00b0\u201e\u00c7\u00a7\u201e\u00c9\u00b4\u201e\u00c7\u00ed\u201e\u00c9\u00e2\u201e\u00c9\u2260\u201e\u00c9\u00c9\u201e\u00c9\u00f3\u201e\u00c5\u00d8\u201e\u00c5\u00ec\u201e\u00c5\u00ec\u201e\u00c5\u00e3\u201e\u00c7\u00e2\u201e\u00c9\u00c4\u201e\u00c7\u00b6\u201e\u00c9\u2265\u201e\u00c9\u2260\u201e\u00c9\u00ba\u201e\u00c9\u00e2\u201e\u00c5\u00df\u201e\u00c5\u00e7\u201e\u00c5\u00e6\u201e\u00c5\u00f4\u201e\u00c4\u00c7
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9715,7 +9715,7 @@ mainbutton.start.inprogress=\u201e\u00c7\u00b5\u201e\u00c9\u00ba\u201e\u00c9\u00
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=[\u201e\u00c7\u03c0\u201e\u00c7\u00f8\u201e\u00c9\u00ba\u201e\u00c9\u00e0]
 
 # google translation: please check
 #en: Start the Nuxeo server.
