--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
@@ -1353,7 +1353,7 @@ command.smartSearch=Smart Search
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=Synchronizowa\u0192\u00e1
 
 # google translation: please check
 #en: Synchronize documents
@@ -1796,7 +1796,7 @@ DocumentRouteInstancesRoot=przypadkach Route
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=Trasy
 
 # Human translation
 #en: {0} saved
@@ -4864,7 +4864,7 @@ label.dnd.choose.operation=Wybierz operacji importu
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=Drop tutaj plik\u221a\u2265w mog\u2248\u00c7y zosta\u0192\u00e1 do\u2248\u00c7\u0192\u00d6czona jako plik g\u2248\u00c7\u221a\u2265wny i / lub za\u2248\u00c7\u0192\u00d6cznik\u221a\u2265w.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9715,7 +9715,7 @@ mainbutton.start.inprogress=Uruchamianie serwera ...
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=Start
 
 # google translation: please check
 #en: Start the Nuxeo server.
