--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
@@ -1353,7 +1353,7 @@ command.smartSearch=Busca Inteligente
 
 # google translation: please check
 #en: Synchronize
-command.sync_admin=???
+command.sync_admin=Sincronizar
 
 # google translation: please check
 #en: Synchronize documents
@@ -1796,7 +1796,7 @@ DocumentRouteInstancesRoot=inst\u221a\u00a2ncias Rota
 
 # google translation: please check
 #en: Route
-DocumentRoute=???
+DocumentRoute=Rota
 
 # Human translation
 #en: {0} saved
@@ -4864,7 +4864,7 @@ label.dnd.choose.operation=Selecione opera\u221a\u00df\u221a\u00a3o de importa\u
 
 # google translation: please check
 #en: Drop here files for them to be attached as the main file and/or attachments.
-label.dnd.dropHere=???
+label.dnd.dropHere=Drop aqui arquivos para serem anexados como o arquivo principal e / ou anexos.
 
 # google translation: please check
 #en: Upload cannot continue due to an error
@@ -9715,7 +9715,7 @@ mainbutton.start.inprogress=Iniciando o servidor ...
 
 # google translation: please check
 #en: Start
-mainbutton.start.text=???
+mainbutton.start.text=In\u221a\u2260cio
 
 # google translation: please check
 #en: Start the Nuxeo server.
