Fix typos in messages.

--- a/nuxeo-admin-center/nuxeo-admin-center-oauth-opensocial/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center-oauth-opensocial/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -1,17 +1,17 @@
 admcommand.OAuthOpensocial = OAuth / OpenSocial
-tab.oauth.serverkey = Server Keys
+tab.oauth.serverkey = Server key
 tab.oauth.providers = Service providers
 tab.oauth.consumers = Consumers
-tab.oauth.externalGadgets = External Gadgets
-tab.oauth.grantedTokenSP = Service providers Tokens
-tab.oauth.grantedTokenConsumers = Consumers Tokens
+tab.oauth.externalGadgets = External gadgets
+tab.oauth.grantedTokenSP = Service providers tokens
+tab.oauth.grantedTokenConsumers = Consumers tokens
 
 adminsubtab.oauth.consumers = Service consumers
-adminsubtab.oauth.consumersTokens = Tokens granted by Nuxeo to Service consumers
+adminsubtab.oauth.consumersTokens = Tokens granted by Nuxeo to service consumers
 adminsubtab.oauth.providers = Service providers
 adminsubtab.oauth.providersTokens = Tokens granted by Service providers to Nuxeo
 
-adminsubtab.oauth.serverKey = Nuxeo Server OAuth keys
+adminsubtab.oauth.serverKey = Nuxeo server OAuth key
 adminsubtab.oauth.externalGadgets = External gadgets management
 
 label.oauth.keyName  = Key Name
@@ -31,12 +31,12 @@ label.oauth.help.userAuthorizationURL =
 label.oauth.help.accessTokenURL =
 
 label.signedfetch.none = Not allowed (i.e.: only support 3 legged)
-label.signedfetch.opensocialViewer = Supported (use OpenSocial Viewer Id as Login)
-label.signedfetch.opensocialOwner = Supported (use OpenSocial Owner Id as Login)
+label.signedfetch.opensocialViewer = Supported (use OpenSocial viewer id as login)
+label.signedfetch.opensocialOwner = Supported (use OpenSocial owner id as login)
 label.signedfetch.dedicatedUser = Supported (use dedicated Nuxeo user)
 label.signedfetch.dedicatedUser.login = Nuxeo login to use
 
-title.create.consumer.entry = Add new Consumer
+title.create.consumer.entry = Add new consumer
 title.create.entry = Add
 
 command.refresh = Refresh
